--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,85 +1,92 @@
-html{
+html {
     font-size: 62.5%;
-}
-
-body{
-    background: url(../images/bg-desktop.svg)center center no-repeat;
-    background-color: hsl(257, 40%, 49%);
-    background-size: cover;
-    margin: 30px 40px;
-}
-
-.header{
+  }
+  
+  body {
+    background-color: #000;
+    color: #fff;
     font-family: 'Poppins', sans-serif;
-}
-
-.header img{
-    width: 220px;
-    margin-right: 10px;
-}
-
-.header h2{
-    font-size: 3rem;
-    color: #000;
-}
-
-.main{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    font-family: 'Open Sans', sans-serif;
-    margin: 100px 0;
-}
-
-.main .image img{
-    width: 100%;
-}
-
-.main .info{
-    margin: 50px 70px;
-}
-
-.main .info h1{
-    font-size: 4.5rem;
-    max-width: 500px;
-    color: #fff;
-}
-
-.main .info p{
-    font-size: 2.3rem;
-    color: rgb(226, 220, 220);
-    margin: 30px 0;
-    max-width: 670px;
-    margin-bottom: 45px;
-    line-height: 30px;
-}
-
-.main .info a{
-    border-radius: 50px;
-    background-color: #fff;
-    color: rgb(101, 45, 116);
-    font-size: 1.8rem;
-    padding: 14px 65px;
-    transition: 0.3s ease-in-out;
-}
-
-.main .info a:hover{
-    color: #fff;
-    background-color: hsl(300, 69%, 71%);
-}
-
-.footer{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+  }
+  
+  .logo-jogo {
     position: absolute;
-    bottom: 50px;
-    right: 80px;
-}
-
-.footer a i{
+    top: 20px;
+    left: 20px;
+  }
+  
+  .logo-jogo img {
+    width: 200px;
+    transition: transform 0.3s;
+  }
+  
+  .logo-jogo img:hover {
+    transform: scale(1.1);
+  }
+  
+  .main {
+    text-align: center;
+    animation: fadeIn 2s ease-in-out;
+  }
+  
+  .content {
+    max-width: 800px;
+    padding: 20px;
+  }
+  
+  .welcome-title {
     font-size: 4rem;
-    padding: 0 10px;
+    font-family: 'Poppins', serif;
+    margin-bottom: 20px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-shadow: 0 0 20px #ff0000;
+  }
+  
+  .welcome-description {
+    font-size: 1.8rem;
+    margin-bottom: 40px;
+    line-height: 1.6;
+    color: #d9d9d9;
+  }
+  
+  .start-btn {
+    background-color: #ff0000;
     color: #fff;
-    transition: 0.2s ease-in-out;
-}
-
-.footer a i:hover{
-    color: hsl(300, 67%, 59%);
-}
+    font-size: 2rem;
+    font-family: 'Poppins', serif;
+    padding: 15px 40px;
+    border-radius: 50px;
+    text-transform: uppercase;
+    transition: background-color 0.3s, transform 0.3s;
+  }
+  
+  .start-btn:hover {
+    background-color: #d40000;
+    transform: translateY(-5px);
+  }
+  
+  .footer {
+    position: absolute;
+    bottom: 20px;
+    font-size: 1.2rem;
+    text-align: center;
+    width: 100%;
+    color: #666;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
